--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
             <script src="./js/objetosDetalles.js"></script>
             <script src="./js/funciones.js"></script>
             <script src="./js/retornoFlecha.js"></script>
-        -->
-
-         <script>
+            <script>
         // Suprimir errores de Statsig para limpiar la consola
         const originalError = console.error;
         console.error = (...args) => {
@@ -52,6 +50,10 @@
             originalError.apply(console, args);
         };
     </script>
-    <script src="./js/valor-referencia.js"></script>
-    </body>
-</html>
+        -->
+
+        <!-- 
+         <script src="./js/valor-referencia.js"></script>
+          <script src="./js/if-else.js"></script>
+        -->
+      <script src="./js/logica-boliana.js"
