--- a/index.html
+++ b/index.html
@@ -57,3 +57,6 @@
           <script src="./js/if-else.js"></script>
         -->
       <script src="./js/logica-boliana.js"
+></script>
+    </body>
+</html>
