propTIps Logica boleana

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
         <!-- 
          <script src="./js/valor-referencia.js"></script>
           <script src="./js/if-else.js"></script>
+           <script src="./js/logica-boliana.js"
+></script>
         -->
-      <script src="./js/logica-boliana.js"
+      <script src="./js/propTips-Boliana.js"
 ></script>
     </body>
 </html>
