prop tips ternario

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <script src="./js/if-else.js"></script>
            <script src="./js/logica-boliana.js"
 ></script>
+<script src="./js/propTips-Boliana.js"></script>
         -->
-      <script src="./js/propTips-Boliana.js"
-></script>
+      <script src="./js/operador-ternario.js"></script>
     </body>
 </html>
