prop-operador-ternario

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
            <script src="./js/logica-boliana.js"
 ></script>
 <script src="./js/propTips-Boliana.js"></script>
+  <script src="./js/operador-ternario.js"></script>
         -->
-      <script src="./js/operador-ternario.js"></script>
+      <script src="./js/prop-tipTernario.js"></script>
     </body>
 </html>
