--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 ></script>
 <script src="./js/propTips-Boliana.js"></script>
   <script src="./js/operador-ternario.js"></script>
+     <script src="./js/prop-tipTernario.js"></script>
+     <script src="./js/swieth.js"></script>
         -->
-    <script src="./js/prop-tipTernario.js"></script>
+
+
 </body>
 
 </html>
