--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
   <script src="./js/operador-ternario.js"></script>
      <script src="./js/prop-tipTernario.js"></script>
      <script src="./js/swieth.js"></script>
+         <script src="./js/while-do-while.js"></script>
         -->
 
-    <script src="./js/while-do-while.js"></script>
+    <script src="./js/for.js"></script>
+
 
 
 </body>
